<resources>
    <string name="app_name">AndroidBeginner</string>
    <string name="text_number_1">Text number 1</string>
    <string name="text_number_2">Text number 2</string>
    <string name="button">Button</string>
    <string name="text_exchange_activity">TextExchangeActivity</string>
    <string name="flags_activity">FlagsActivity</string>
    <string name="future_menu_name">.....</string>
    <string name="image_activity">ImageActivity</string>
    <string name="download_image">Download image</string>
    <string name="url_image">https://st.depositphotos.com/1744814/2242/i/950/depositphotos_22424263-stock-photo-funny-portrait-of-young-woman.jpg</string>
    <string name="forgot_your_username_password"><u>Forgot your username/password ?</u></string>
    <string name="login_button_login_text">LOG IN</string>
    <string name="login_button_create_account">CREATE ACCOUNT</string>
    <string name="login_linear_activity">LoginLinearActivity</string>
    <string name="profile_activity">ProfileActivity</string>
    <string name="text_button_watch_view">WatchView</string>
    <string name="pie_chart_view_button">PieChartView</string>
    <string name="pie_chart_show_button">SHOW</string>
    <string name="pie_chart_no_data_text">NO DATA</string>
    <string name="text_button_equalizer_view">EqualizerView</string>
</resources>