<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="50dp"
        android:layout_marginStart="1dp"
        android:layout_weight="0"
        android:background="@color/color_background_textView1"
        android:gravity="center"
        android:text="@string/text_number_1"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="50dp"
        android:layout_marginStart="1dp"
        android:layout_weight="0"
        android:background="@color/color_background_textView2"
        android:gravity="center"
        android:text="@string/text_number_2"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="50dp"
        android:layout_marginStart="1dp"
        android:layout_weight="0"
        android:background="#0B76C6"
        android:text="@string/button"
        android:textColor="@color/text_color_button"
        android:textSize="36sp" />

</LinearLayout>