<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_menu_text_exchange_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_value"
            android:layout_marginTop="@dimen/margin_value_half"
            android:layout_marginEnd="@dimen/margin_value"
            android:layout_marginBottom="@dimen/margin_value_half"
            android:layout_weight="1"
            android:background="@color/background_color_menu_button"
            android:text="@string/text_exchange_activity"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_menu_flags_activity"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_value"
            android:layout_marginTop="@dimen/margin_value_half"
            android:layout_marginEnd="@dimen/margin_value"
            android:layout_marginBottom="@dimen/margin_value_half"
            android:layout_weight="1"
            android:background="@color/background_color_menu_button"
            android:text="@string/flags_activity"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_menu_login_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_value"
            android:layout_marginTop="@dimen/margin_value_half"
            android:layout_marginEnd="@dimen/margin_value"
            android:layout_marginBottom="@dimen/margin_value_half"
            android:layout_weight="1"
            android:background="@color/background_color_menu_button"
            android:text="@string/login_linear_activity"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_menu_image_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_value"
            android:layout_marginTop="@dimen/margin_value_half"
            android:layout_marginEnd="@dimen/margin_value"
            android:layout_marginBottom="@dimen/margin_value_half"
            android:layout_weight="1"
            android:background="@color/background_color_menu_button"
            android:text="@string/image_activity"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_menu_profile_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_value"
            android:layout_marginTop="@dimen/margin_value_half"
            android:layout_marginEnd="@dimen/margin_value"
            android:layout_marginBottom="@dimen/margin_value"
            android:layout_weight="1"
            android:background="@color/background_color_menu_button"
            android:text="@string/profile_activity"
            android:textAllCaps="false"
            android:textSize="24sp" />
    </LinearLayout>
</ScrollView>