<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_weight="0"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_logo_height"
                android:src="@drawable/login_logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTextPersonName"
                style="@android:style/Widget.AutoCompleteTextView"
                android:layout_width="@dimen/login_et_user_width"
                android:layout_height="@dimen/login_et_user_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/login_et_user_margin_top"
                android:layout_weight="0"
                android:background="@color/logo_et_user_bg_color"
                android:drawableLeft="@drawable/user"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingLeft="@dimen/login_et_user_padding_left"
                android:textSize="@dimen/login_et_user_text_size" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="@dimen/login_et_password_width"
                android:layout_height="@dimen/login_et_password_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/login_et_password_margin_top"
                android:layout_weight="0"
                android:background="@color/login_et_password_bg"
                android:drawableLeft="@drawable/padlock"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/login_et_password_padding_left"
                android:textSize="@dimen/login_et_password_text_size" />

            <Button
                android:id="@+id/button_login"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="@dimen/login_button_login_width"
                android:layout_height="@dimen/login_button_login_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/login_button_login_margin_start"
                android:layout_marginTop="@dimen/login_button_login_margin_top"
                android:layout_weight="0"
                android:background="@color/login_button_login_bg"
                android:fontFamily="@font/monda_regular"
                android:text="@string/login_button_login_text"
                android:textColor="@color/text_color_button"
                android:textSize="@dimen/login_button_login_text_size" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/login_tv_forgot_margin_top"
                android:layout_weight="0"
                android:fontFamily="@font/monda_regular"
                android:gravity="center"
                android:text="@string/forgot_your_username_password"
                android:textColor="@color/login_tv_forgot"
                android:textSize="@dimen/login_tv_forgot_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_layout_crete_account_margin_bottom"
            android:layout_weight="0"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_create_account"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="@dimen/login_button_create_account_width"
                android:layout_height="@dimen/login_button_create_account_height"
                android:layout_gravity="center"
                android:background="@color/login_button_create_account_bg"
                android:fontFamily="@font/monda_regular"
                android:text="@string/login_button_create_account"
                android:textColor="@color/text_color_button"
                android:textSize="@dimen/login_button_create_account_text_size" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>